# MonopolyCPP

./: CMakeLists.txt  README.txt  addsquarewindow.cpp  addsquarewindow.h  addsquarewindow.ui  chance.cpp  chance.hpp  freeparking.cpp  freeparking.hpp  game.cpp  game.hpp  gotojail.cpp  gotojail.hpp  jail.cpp  jail.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  player.cpp  player.hpp  playerselectiondialog.cpp  playerselectiondialog.h  playerselectiondialog.ui  railroad.cpp  railroad.hpp  resources.qrc  square.cpp  square.hpp  start.cpp  start.hpp  street.cpp  street.hpp  tax.cpp  tax.hpp  utility.cpp  utility.hpp
